sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:4: error: illegal start of simple expression
  while ()
         ^AlgCombSort:5: error: ')' expected but '}' found.
} 
^