sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart : Int = getNombreValeurs()
  while ()
}